BoardActivity moved to AppIndex, some fixes with evenetlistener and z-index

--- a/src/assets/styles/cmps/BoardHeader.scss
+++ b/src/assets/styles/cmps/BoardHeader.scss
@@ -3,7 +3,7 @@
     padding-block-start: rem(16px);
     padding-inline: rem(38px);
     position: sticky;
-    z-index: 1000;
+    z-index: 600;
     top: 0;
     left: 0;
 
